Доработал поправки к Барберу

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -20,7 +20,7 @@
             <a href="#">ПРАЙС-ЛИСТ</a>
           </li>
           <li>
-            <a href="#">МАГАЗИН</a>
+            <a class="active" href="#">МАГАЗИН</a>
           </li>
           <li>
             <a href="#">КОНТАКТЫ</a>
@@ -33,21 +33,21 @@
       </nav>
    </header>
    <main class="catalog">
-    <div class="catalog-content">
+     <h1>Набор для путешествий "Baxter of California"</h1>
       <div class="breadcrumbs">
-        <h1 class="set-baxofca">Набор для путешествий "Baxter of California"</h1>
         <ul>
           <li>
-            <a class="mainpage" href="#">ГЛАВНАЯ</a>
+            <a href="#">ГЛАВНАЯ</a>
           </li>
           <li>
-            <a class="shop" href="#">МАГАЗИН</a>
+            <a href="#">МАГАЗИН</a>
           </li>
           <li>
-            <a class="care-cosmetics" href="#">СРЕДСТВА ДЛЯ УХОДА</a>
+            <a href="#">СРЕДСТВА ДЛЯ УХОДА</a>
           </li>
           <li>
-            <a class="travel-set-baxofca" href="#">НАБОР ДЛЯ ПУТЕШЕСТВИЙ "Baxter of California"</a>
+            <p>НАБОР ДЛЯ ПУТЕШЕСТВИЙ "Baxter of California"</p>
+          </li>
         </ul>
       </div>
       <section class="pics-set-baxofca">
@@ -69,25 +69,13 @@
         </table>
       </section>
       <section class="trsetbaxofca-item-description">
-        <div class="in-stock">
-          <table class="tbl-trsetbaxofca-instock">
-            <tr>
-              <td>Есть в наличии</td>
-              <td>Артикул: Dexter-AE</td>
-            </tr>
-          </table>
+        <div class="trsetbaxofca-instock">
+          <p>Есть в наличии</p>
+            <p>Артикул: Dexter-AE</p>
+          <p>Travel Kit- необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+            <div class="price-trsetbaxofca-instock">2900руб.</div>
+            <a class="btn-buy-trsetbaxofca-instock"> href="#">купить</a>
         </div>
-        <p>Travel Kit- необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-        <table class="tbl-buy-trsetbaxofca">
-          <tr>
-            <td class="price">
-              2900руб.
-            </td>
-            <td class="btn-buy">
-              <a href="#">купить</a>
-            </td>
-          </tr>
-        </table>
           <div class="trsetbaxofca-include">
             <p>В набор входят:</p>
               <ul>
@@ -99,5 +87,25 @@
               </ul>
           </div>
       </section>
-    </main>
-  </html>
+      <footer class="main-footer">
+      <div class="container">
+        <section class="footer-contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (812) 666-02-66
+        </section>
+        <section class="footer-social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="footer-copyright">
+          <p>Разработано:</p>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </section>
+      </div>
+    </footer>
+  </main>
+</html>
