стили и фото на проверку

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,8 @@
  <body>
   <header class="main-header">
     <div class="container">
-      <img src="imglogo/logo.png" alt="Barbershop">
+      <link href="css/style.css" rel="stylesheet">
+        <img src="img/Logo.png" alt="Barbershop">
       <nav class="navigation-menu">
         <ul>
           <li>
@@ -85,7 +86,8 @@
     </div>
     <div class="item-list">
       <div class="item-list-up-left">
-        <img src="img/baxofca.jpg" alt="travel set BaxofCA">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/Layer 38.jpg" alt="travel set BaxofCA">
          <p>Набор для путешествий "Baxter of California"</p>
            <div class="amount-2900">
              <p>2900руб.</p>
@@ -93,7 +95,8 @@
            </div>
       </div>
       <div class="item-list-up-centr">
-        <img src="img/condbaxofca.jpg" alt="Conditioner BaxofCA">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/Layer 30.jpg" alt="Conditioner BaxofCA">
         <p>Увлажняющий кондиционер Baxter of California</p>
         <div class="amount-750">
           <p>750руб.</p>
@@ -101,7 +104,8 @@
         </div>
       </div>
       <div class="item-list-up-right">
-        <img src="img/hairgelsuavec.jpg" alt="HAir gel Suavecito">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/LAyer 39.jpg" alt="HAir gel Suavecito">
         <p>Гель для волос "Suavecito"</p>
         <div class="amount-290">
           <p>290руб.</p>
@@ -109,7 +113,8 @@
         </div>
       </div>
       <div class="item-list-down-left">
-        <img src="img/hairstyleclayamcrew.jpg" alt="hair clay AmCrew">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/Layer 32.jpg" alt="hair clay AmCrew">
         <p>Глина для укладки волос "American crew"</p>
         <div class="amount-500">
           <p>500руб.</p>
@@ -117,7 +122,8 @@
         </div>
       </div>
       <div class="item-list-down-centr">
-        <img src="img/hairstylegelamcrew.jpg" alt="hair style gel AmCrew">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/Layer 33.jpg" alt="hair style gel AmCrew">
         <p>Гель для волос "American crew"</p>
         <div class="amount-300">
           <p>300руб.</p>
@@ -125,7 +131,8 @@
         </div>
       </div>
       <div class="item-list-down-right">
-        <img src="img/shavesetbaxofca.jpg" alt="shave set BaxofCa">
+        <link href="css/style.css" rel="stylesheet">
+          <img src="img/Layer 42.jpg" alt="shave set BaxofCa">
         <p>Набор для бритья "Baxter of California"</p>
         <div class="amount-3900">
           <p>3900руб.</p>
