--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,8 @@
  <body>
   <header class="main-header">
     <div class="container">
-      <img src="imglogo/logo.png" alt="Barbershop">
+      <link href="css/style.css" rel="stylesheet">
+        <img src="img/Logo.png" alt="Barbershop">
       <nav class="navigation-menu">
         <ul>
           <li>
@@ -52,18 +53,22 @@
       </div>
       <section class="pics-set-baxofca">
         <figure class="4pics-baxofca">
-          <img src="img/mainbaxofca.jpg" alt="Большая фото travel set BaxofCa">
+          <link href="css/style.css" rel="stylesheet">
+           <img src="img/Layer 47 copy.jpg" alt="Большая фото travel set BaxofCa">
         </figure>
         <table class="baxofca-3pics">
           <tr>
             <td>
-              <img src="img.1baxofca.jpg" alt="фото1 travel set BaxofCa">
+              <link href="css/style.css" rel="stylesheet">
+                <img src="img/layer 45.jpg" alt="фото1 travel set BaxofCa">
             </td>
             <td>
-              <img src="img.2baxofca.jpg" alt="фото22 travel set BaxofCa">
+              <link href="css/style.css" rel="stylesheet">
+                <img src="img/layer 46.jpg" alt="фото22 travel set BaxofCa">
             </td>
             <td>
-              <img src="img.3baxofca.jpg" alt="фото33 travel set BaxofCa">
+              <link href="css/style.css" rel="stylesheet">
+                <img src="img/layer 47.jpg" alt="фото33 travel set BaxofCa">
             </td>
           </tr>
         </table>
