Доработки css+ фото

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,12 @@
  <head>
    <meta charset="utf-8">
    <title> Барбешоп "Бородинский"</title>
+   <link href="css/style.css" rel="stylesheet">
+     <img src="img/logo.png" alt="Barbershop">
  </head>
  <body>
   <header class="main-header">
     <div class="container">
-      <link href="css/style.css" rel="stylesheet">
-        <img src="img/Logo.png" alt="Barbershop">
       <nav class="navigation-menu">
         <ul>
           <li>
@@ -54,21 +54,21 @@
       <section class="pics-set-baxofca">
         <figure class="4pics-baxofca">
           <link href="css/style.css" rel="stylesheet">
-           <img src="img/Layer 47 copy.jpg" alt="Большая фото travel set BaxofCa">
+           <img src="img/layer-47.jpg" alt="Большая фото travel set BaxofCa">
         </figure>
         <table class="baxofca-3pics">
           <tr>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer 45.jpg" alt="фото1 travel set BaxofCa">
+                <img src="img/layer-45.jpg" alt="фото1 travel set BaxofCa">
             </td>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer 46.jpg" alt="фото22 travel set BaxofCa">
+                <img src="img/layer-46.jpg" alt="фото22 travel set BaxofCa">
             </td>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer 47.jpg" alt="фото33 travel set BaxofCa">
+                <img src="img/layer-47.jpg" alt="фото33 travel set BaxofCa">
             </td>
           </tr>
         </table>
