--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,12 @@
  <head>
    <meta charset="utf-8">
    <title> Барбешоп "Бородинский"</title>
+   <link href="css/style.css" rel="stylesheet">
+     <img src="img/logo.png" alt="Barbershop">
  </head>
  <body>
   <header class="main-header">
     <div class="container">
-      <link href="css/style.css" rel="stylesheet">
-        <img src="img/Logo.png" alt="Barbershop">
       <nav class="navigation-menu">
         <ul>
           <li>
@@ -43,7 +43,7 @@
             <a href="#">МАГАЗИН</a>
           </li>
           <li>
-            <p>СРЕДСТВА ДЛЯ УХОДА</p>
+            <h1>СРЕДСТВА ДЛЯ УХОДА</h1>
           </li>
         </ul>
       </div>
@@ -87,7 +87,7 @@
     <div class="item-list">
       <div class="item-list-up-left">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/Layer 38.jpg" alt="travel set BaxofCA">
+          <img src="img/layer-38.jpg" alt="travel set BaxofCA">
          <p>Набор для путешествий "Baxter of California"</p>
            <div class="amount-2900">
              <p>2900руб.</p>
@@ -96,7 +96,7 @@
       </div>
       <div class="item-list-up-centr">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/Layer 30.jpg" alt="Conditioner BaxofCA">
+          <img src="img/layer-30.jpg" alt="Conditioner BaxofCA">
         <p>Увлажняющий кондиционер Baxter of California</p>
         <div class="amount-750">
           <p>750руб.</p>
@@ -105,7 +105,7 @@
       </div>
       <div class="item-list-up-right">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/LAyer 39.jpg" alt="HAir gel Suavecito">
+          <img src="img/layer-39.jpg" alt="HAir gel Suavecito">
         <p>Гель для волос "Suavecito"</p>
         <div class="amount-290">
           <p>290руб.</p>
@@ -114,7 +114,7 @@
       </div>
       <div class="item-list-down-left">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/Layer 32.jpg" alt="hair clay AmCrew">
+          <img src="img/layer-32.jpg" alt="hair clay AmCrew">
         <p>Глина для укладки волос "American crew"</p>
         <div class="amount-500">
           <p>500руб.</p>
@@ -123,7 +123,7 @@
       </div>
       <div class="item-list-down-centr">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/Layer 33.jpg" alt="hair style gel AmCrew">
+          <img src="img/layer-33.jpg" alt="hair style gel AmCrew">
         <p>Гель для волос "American crew"</p>
         <div class="amount-300">
           <p>300руб.</p>
@@ -132,7 +132,7 @@
       </div>
       <div class="item-list-down-right">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/Layer 42.jpg" alt="shave set BaxofCa">
+          <img src="img/layer-42.jpg" alt="shave set BaxofCa">
         <p>Набор для бритья "Baxter of California"</p>
         <div class="amount-3900">
           <p>3900руб.</p>
