--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main class="container">
       <div class="index-logo">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/BORODINSKI Logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+          <img src="img/borodinski-logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
       <section class="features">
         <div class="features-item">
@@ -70,7 +70,7 @@
           <div class="gallery">
             <figure class="gallery-content">
               <link href="css/style.css" rel="stylesheet">
-              <img src="img/Layer 21.jpg" width="286" height="164" alt="">
+              <img src="img/layer-21.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-prev" type="button">Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
