Барьер фото+ мелочевка

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,35 +3,35 @@
  <head>
    <meta charset="utf-8">
    <title> Барбешоп "Бородинский"</title>
-   <link href="css/style.css" rel="stylesheet">
-     <img src="img/logo.png" alt="Barbershop">
  </head>
  <body>
   <header class="main-header">
     <div class="container">
-      <nav class="navigation-menu">
-        <ul>
-          <li>
-            <a href="#">ИНФОРМАЦИЯ</a>
-          </li>
-          <li>
-            <a href="#">НОВОСТИ</a>
-          </li>
-          <li>
-            <a href="#">ПРАЙС-ЛИСТ</a>
-          </li>
-          <li>
-            <a class="active" href="#">МАГАЗИН</a>
-          </li>
-          <li>
-            <a href="#">КОНТАКТЫ</a>
-          </li>
-        </ul>
+        <nav class="navigation-menu">
+          <link href="css/style.css" rel="stylesheet">
+          <img src="img/logo.png" alt="Barbershop">
+          <ul>
+            <li>
+              <a href="#">ИНФОРМАЦИЯ</a>
+            </li>
+            <li>
+              <a href="#">НОВОСТИ</a>
+            </li>
+            <li>
+              <a href="#">ПРАЙС-ЛИСТ</a>
+            </li>
+            <li>
+              <a class="active" href="#">МАГАЗИН</a>
+            </li>
+            <li>
+              <a href="#">КОНТАКТЫ</a>
+            </li>
+          </ul>
+        </nav>
+      <div class="user-block">
+        <a class="login" href="#">ВХОД</a>
+      </div>
     </div>
-        <div class="user-block">
-         <a class="login" href="#">ВХОД</a>
-        </div>
-      </nav>
    </header>
    <main class="catalog">
      <h1>Набор для путешествий "Baxter of California"</h1>
@@ -54,21 +54,21 @@
       <section class="pics-set-baxofca">
         <figure class="4pics-baxofca">
           <link href="css/style.css" rel="stylesheet">
-           <img src="img/layer-47.jpg" alt="Большая фото travel set BaxofCa">
+           <img src="img/baxofca-tr-set.jpg" alt="Большая фото travel set BaxofCa">
         </figure>
         <table class="baxofca-3pics">
           <tr>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer-45.jpg" alt="фото1 travel set BaxofCa">
+                <img src="img/baxofca-tr-set2.jpg" alt="фото1 travel set BaxofCa">
             </td>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer-46.jpg" alt="фото22 travel set BaxofCa">
+                <img src="img/tr-bag.jpg" alt="фото22 travel set BaxofCa">
             </td>
             <td>
               <link href="css/style.css" rel="stylesheet">
-                <img src="img/layer-47.jpg" alt="фото33 travel set BaxofCa">
+                <img src="img/baxofca-tr-set.jpg" alt="фото33 travel set BaxofCa">
             </td>
           </tr>
         </table>
