--- a/catalog.html
+++ b/catalog.html
@@ -3,35 +3,35 @@
  <head>
    <meta charset="utf-8">
    <title> Барбешоп "Бородинский"</title>
-   <link href="css/style.css" rel="stylesheet">
-     <img src="img/logo.png" alt="Barbershop">
  </head>
  <body>
   <header class="main-header">
     <div class="container">
-      <nav class="navigation-menu">
-        <ul>
-          <li>
-            <a href="#">ИНФОРМАЦИЯ</a>
-          </li>
-          <li>
-            <a href="#">НОВОСТИ</a>
-          </li>
-          <li>
-            <a href="#">ПРАЙС-ЛИСТ</a>
-          </li>
-          <li>
-            <a href="#">МАГАЗИН</a>
-          </li>
-          <li>
-            <a href="#">КОНТАКТЫ</a>
-          </li>
-        </ul>
+        <nav class="navigation-menu">
+          <link href="css/style.css" rel="stylesheet">
+          <img src="img/logo.png" alt="Barbershop">
+          <ul>
+            <li>
+              <a href="#">ИНФОРМАЦИЯ</a>
+            </li>
+            <li>
+              <a href="#">НОВОСТИ</a>
+            </li>
+            <li>
+              <a href="#">ПРАЙС-ЛИСТ</a>
+            </li>
+            <li>
+              <a class="active" href="#">МАГАЗИН</a>
+            </li>
+            <li>
+              <a href="#">КОНТАКТЫ</a>
+            </li>
+          </ul>
+        </nav>
+      <div class="user-block">
+        <a class="login" href="#">ВХОД</a>
+      </div>
     </div>
-        <div class="user-block">
-         <a class="login" href="#">ВХОД</a>
-        </div>
-      </nav>
    </header>
    <main class="catalog">
       <div class="breadcrumbs">
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </div>
-      <div class"filter-panel">
+      <div class="filter-panel">
       <p>ПРОИЗВОДИТЕЛИ</p>
         <div class="manufacturers">
           <form action="echo/htmlacademy.ru" method="post">
@@ -55,7 +55,7 @@
               <label for="baxter">BAXTER OF CALIFORNIA</label>
             <input type="checkbox" name="choose" id="natty">
               <label for="natty">MR NATTY</label>
-            <input type="checkbox" name"choose" id="suavec" checked>
+            <input type="checkbox" name="choose" id="suavec" checked>
               <label for="suavec">SAUVECITO</label>
             <input type="checkbox" name="choose" id="malin+go">
               <label for="malin+go">MALIN-GOETZ</label>
@@ -80,14 +80,12 @@
           АКСЕССУАРЫ
         </label>
         </div>
-      <input type="submit" value="ПОКАЗАТЬ">
-      <br>
+          <input type="submit" value="ПОКАЗАТЬ"><br>
       </div>
-    </div>
     <div class="item-list">
       <div class="item-list-up-left">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-38.jpg" alt="travel set BaxofCA">
+          <img src="img/baxter-of-ca-tr.jpg" alt="travel set BaxofCA">
          <p>Набор для путешествий "Baxter of California"</p>
            <div class="amount-2900">
              <p>2900руб.</p>
@@ -96,7 +94,7 @@
       </div>
       <div class="item-list-up-centr">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-30.jpg" alt="Conditioner BaxofCA">
+          <img src="img/baxter-of-ca-condition.jpg" alt="Conditioner BaxofCA">
         <p>Увлажняющий кондиционер Baxter of California</p>
         <div class="amount-750">
           <p>750руб.</p>
@@ -105,7 +103,7 @@
       </div>
       <div class="item-list-up-right">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-39.jpg" alt="HAir gel Suavecito">
+          <img src="img/hair-gel-suavecito.jpg" alt="HAir gel Suavecito">
         <p>Гель для волос "Suavecito"</p>
         <div class="amount-290">
           <p>290руб.</p>
@@ -114,7 +112,7 @@
       </div>
       <div class="item-list-down-left">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-32.jpg" alt="hair clay AmCrew">
+          <img src="img/hair-clay.jpg" alt="hair clay AmCrew">
         <p>Глина для укладки волос "American crew"</p>
         <div class="amount-500">
           <p>500руб.</p>
@@ -123,7 +121,7 @@
       </div>
       <div class="item-list-down-centr">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-33.jpg" alt="hair style gel AmCrew">
+          <img src="img/amcrew-gel.jpg" alt="hair style gel AmCrew">
         <p>Гель для волос "American crew"</p>
         <div class="amount-300">
           <p>300руб.</p>
@@ -132,7 +130,7 @@
       </div>
       <div class="item-list-down-right">
         <link href="css/style.css" rel="stylesheet">
-          <img src="img/layer-42.jpg" alt="shave set BaxofCa">
+          <img src="img/shave-set-baxter.jpg" alt="shave set BaxofCa">
         <p>Набор для бритья "Baxter of California"</p>
         <div class="amount-3900">
           <p>3900руб.</p>
