--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="gallery">
             <figure class="gallery-content">
               <link href="css/style.css" rel="stylesheet">
-              <img src="img/layer-21.jpg" width="286" height="164" alt="">
+              <img src="img/borodinski-inside.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-prev" type="button">Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
